--- a/config/webhook/manifests.yaml
+++ b/config/webhook/manifests.yaml
@@ -32,6 +32,27 @@ metadata:
 webhooks:
 - admissionReviewVersions:
   - v1
+  - v1beta1
+  clientConfig:
+    service:
+      name: webhook-service
+      namespace: system
+      path: /validate-servicebinding-io-v1-servicebinding
+  failurePolicy: Fail
+  name: v1.servicebindings.servicebinding.io
+  rules:
+  - apiGroups:
+    - servicebinding.io
+    apiVersions:
+    - v1
+    operations:
+    - CREATE
+    - UPDATE
+    resources:
+    - servicebindings
+  sideEffects: None
+- admissionReviewVersions:
+  - v1
   clientConfig:
     service:
       name: webhook-service
